# generative_ai_aws

./: .gitignore  LICENSE  README.md  pyproject.toml
exercises/: 1_supervised_learning.ipynb  2_unsupervised_learning.ipynb  3_decision_tree.ipynb  4_neural_network.ipynb
