[project]
name = "ai-course"
version = "0.1.0"
description = "Environment to test the courses scripts."
authors = [
    {name = "Diego Soares"}
]
readme = "README.md"
package-mode = false
requires-python = "==3.12.*"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
